--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
-.App {
+html {
   font-family: sans-serif;
-  text-align: center;
+  font-size: 12px;
+}
+
+.List {
+  border: 1px solid #d9dddd;
+}
+
+.ListItemEven,
+.ListItemOdd {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ListItemEven {
+  background-color: #f8f8f0;
 }
